--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,13 @@
-- title: "Home"
-  url: /
-- title: "About"
-  url: /about/
-- title: "Blog"
-  url: /blog/
+main:
+  - title: "Home"
+    url: /
+  - title: "About"
+    url: /about/
+  - title: "Portfolio"
+    url: /portfolio/
+  - title: "Blog"
+    url: /blog/
+  - title: "Skills"
+    url: /skills/
+  - title: "Contact"
+    url: /contact/
