--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,11 @@ main:
     url: /
   - title: "About"
     url: /about/
-  - title: "Portfolio"
+  - title: "Projects"
     url: /portfolio/
-  - title: "Blog"
-    url: /blog/
   - title: "Skills"
     url: /skills/
+  - title: "Blog"
+    url: /blog/
   - title: "Contact"
     url: /contact/
